group 'org.openkoreantext'
version '9.1.4.0'

apply plugin: 'java'
apply plugin: 'maven-publish'
apply plugin: 'signing'
apply plugin: 'jacoco'
apply plugin: 'idea'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

configurations {
    distJars {
        extendsFrom runtimeClasspath
    }
}

ext {
    elasticsearchVersion = '9.1.4'
    openKoreanTextVersion = '2.3.1'
}

dependencies {
    implementation group: 'org.openkoreantext', name: 'open-korean-text', version: openKoreanTextVersion

    compileOnly group: 'org.elasticsearch', name: 'elasticsearch', version: elasticsearchVersion

    testImplementation group: 'org.elasticsearch.test', name: 'framework', version: elasticsearchVersion
    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
}

task makePluginDescriptor(type: Copy) {
    from 'src/main/resources'
    into 'build/tmp/plugin'
    expand([
        'descriptor': [
            'name': 'elasticsearch-analysis-openkoreantext',
            'classname': 'org.elasticsearch.plugin.analysis.openkoreantext.AnalysisOpenKoreanTextPlugin',
            'description': 'Korean analysis plugin integrates open-korean-text module into elasticsearch.',
            'version': '9.1.4',
            'javaVersion': java.sourceCompatibility,
            'elasticsearchVersion' : elasticsearchVersion
        ]
    ])
}

task buildPluginZip(type: Zip, dependsOn: [':jar', ':makePluginDescriptor']) {
    from configurations.distJars
    from jar.archiveFile
    from 'build/tmp/plugin'
    into '.'
    archiveClassifier = 'plugin'
}

build.finalizedBy(buildPluginZip)

task javadocJar(type: Jar) {
    archiveClassifier = 'javadoc'
    from javadoc
}

tasks.withType(Javadoc) {
    options.addStringOption('Xdoclint:none', '-quiet')
    options.addStringOption('encoding', 'UTF-8')
    options.addStringOption('charSet', 'UTF-8')
}

task sourcesJar(type: Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives jar
    archives javadocJar
    archives sourcesJar
}

test {
    jvmArgs '-Dtests.security.manager=false'
}

jacoco {
    toolVersion = '0.8.12'
}

jacocoTestReport {
    reports {
        html.required = true
        xml.required = true
        csv.required = false
    }
}

task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
    sourceDirectories = files(sourceSets.main.allSource.srcDirs)
    classDirectories =  files(sourceSets.main.output)
    executionData = files(jacocoTestReport.executionData)
    reports {
        html.required = true
        xml.required = true
        csv.required = false
    }
}
